# first-django-hexlet

./: README.md  pyproject.toml
hexlet_django_blog/: settings.py  urls.py
