[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
